--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ footer {
   }
 
   .light {
-    --bg-url: url(./assets/bg-desktop-light.jpgz);
+    --bg-url: url(./assets/bg-desktop-light.jpg);
   }
 }
 /* animation*/
